# CSD2

./: README.md
C++/Inheritance/: Makefile  bass.h  instrument.cpp  instrument.h  piano.h
C++/NinoSaglia_SynthSong/: adsr.cpp  sine.cpp  wave.h
Eind_Opdracht/: Eind_Opdracht.py
Eind_Opdracht/media/: Sequence.mid
Python/Irregular_Beat_gen/: Eind_Opdracht.py
csd2a/Eind_Opdracht/: Eind_Opdracht.py
csd2a/Eind_Opdracht/media/: Sequence.mid
csd2a/python_basics/: helloworld.py  playsound.py
csd2a/ritmische_playback/: imput.txt
csd2b/Inheritance/: bass.cpp  guitar.cpp  guitar.h  main.cpp  piano.cpp
csd2b/NinoSaglia_SynthSong/: Makefile  adsr.h  main.cpp  osc.cpp  osc.h  sine.h  wave.cpp
csd2b/ritmische_playback/: ritmische_player.py
csd2c/good code bad code/: bad.txt  good-bad_Nino.cpp
csd2c/tests/Delay reverb (voice oonly)/: CMakeLists.txt  jack_module.cpp  ringbuffer.cpp  ringbuffer.h  visrev.sln  visrev.vcxproj  visrev.vcxproj.filters
csd2c/tests/Delay reverb (voice oonly)/Debug/visrev.tlog/: visrev.lastbuildstate
csd2c/tests/Delay reverb (voice oonly)/libraries/: libjack.def  libjack.lib
csd2c/tests/Delay reverb (voice oonly)/x64/Debug/: vc142.idb
csd2c/tests/Delay reverb (voice oonly)/x64/Debug/visrev.tlog/: visrev.lastbuildstate
csd2d opdracht1/: sketch - Copy.js  sketch.js
csd2d/csd2d opdracht1/: sketch.js
csd2d/playfull web app/: README.txt  index.html  sketch.js
python_basics/: helloworld.py  playsound.py
ritmische_playback/: imput.txt  ritmische_player.py  time tset.py
single_sample_sequencer/: single_sample_sequencer.py
(+18 files in other folders)
